Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5342

oops in lustre_swab_lmv_user_md() on PPC

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • Lustre 2.6.0, Lustre 2.7.0
    • 3
    • 14901

      The LL_IOC_LMV_SETSTRIPE handler only expects a struct lmv_user_md header but in ll_dir_setdirstripe() we pass lum to lustre_swab_lmv_user_md() which swabs the header and lum->lum_stripe_count objects.

      Unable to handle kernel paging request for data at address 0x0002c04d
      Faulting instruction address: 0xd00000000985de08
      Oops: Kernel access of bad area, sig: 11 [#1]
      SMP NR_CPUS=1024 NUMA pSeries
      Modules linked in: lustre(U) obdecho(U) mgc(U) lov(U) osc(U) mdc(U) lmv(U) fid(U) fld(U) \
      ptlrpc(U) obdclass(U) ksocklnd(U) lnet(U) sha512_generic sha256_generic libcfs(U) nfsd ex\
      portfs nfs fscache lockd auth_rpcgss nfs_acl sunrpc ib_ipoib rdma_ucm ib_ucm ib_uverbs ib\
      _umad rdma_cm ib_cm iw_cm ib_addr ipv6 ext3 jbd mlx4_ib ib_sa ib_mad ib_core mlx4_en mlx4\
      _core raid1 tg3 ptp pps_core shpchp ses enclosure sg ext4 jbd2 mbcache raid0 sd_mod crc_t\
      10dif ipr dm_mirror dm_region_hash dm_log dm_mod [last unloaded: scsi_wait_scan]
      NIP: d00000000985de08 LR: d00000000985bad4 CTR: d000000007ff826f
      REGS: c00000079ebc36f0 TRAP: 0300   Not tainted  (2.6.32-431.20.3.el6.ppc64)
      MSR: 8000000000009032 <EE,ME,IR,DR>  CR: 28082484  XER: 20000005
      DAR: 000000000002c04d, DSISR: 0000000042000000
      TASK = c00000079aa96b00[7506] 'lfs' THREAD: c00000079ebc0000 CPU: 13
      GPR00: 0000000004000000 c00000079ebc3970 d000000009936eb8 c000000775fdbb18
      GPR04: 0000000000000000 ffffffffffffffff 000000eb00000000 f8ffe1eb000000eb
      GPR08: c000000775fdbb20 c000000775fdbb24 000000007c0803a6 f8ffe1ebe80000eb
      GPR12: d0000000098d51e8 c000000001054580 0000000000000080 0000000000000080
      GPR16: d00000000caadf68 d00000000caadf40 c00000078c194000 c000000775bbb3c0
      GPR20: 00000000000001ff c000000775bbb3c8 d00000000ca83d10 d00000000ca808c8
      GPR24: d00000000ca80750 d00000000caad2f0 c000000775a538f8 d000000006424ae8
      GPR28: 0000000000003a00 000000000002c04d d00000000caadd70 c000000775bbb3c8
      NIP [d00000000985de08] .lustre_swab_fiemap+0xe8/0x170 [ptlrpc]
      LR [d00000000985bad4] .lustre_swab_lmv_user_md+0x64/0xc0 [ptlrpc]
      Call Trace:
      [c00000079ebc3970] [d00000000caadd70] cdls.83485+0x0/0xfffffffffffd27f0 [lustre] (unrelia\
      ble)
      [c00000079ebc3a00] [d00000000c9d55d0] .ll_dir_ioctl+0x8670/0xdb90 [lustre]
      [c00000079ebc3c00] [c0000000001e0894] .vfs_ioctl+0x54/0x140
      [c00000079ebc3c90] [c0000000001e0ae0] .do_vfs_ioctl+0x90/0x7c0
      [c00000079ebc3d80] [c0000000001e12c4] .SyS_ioctl+0xb4/0xd0
      [c00000079ebc3e30] [c000000000008564] syscall_exit+0x0/0x40
      Instruction dump:
      7c673b78 7c884378 794a4602 7929c3c6 796b4602 7800c3c6 7cea5378 7929c220
      7d0b5b78 7800c220 7d494b78 7d600378 <f93d0000> f81d0008 7cc02d2c 393d0014
      

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: