LU-5342 lmv: fix some byte order issues

In the handler for LL_IOC_LMV_GETSTRIPE convert stripe FIDs from
little to CPU endian when unpacking lmv_user_md. In lmv_unpack_md_v1()
fix a double conversion of the stripe count. In
lustre_swab_lmv_user_md() do not convert stripe FIDs.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I0aa623a544c1b4d05a0ecf6ac99863c0e75daa54
Reviewed-on: http://review.whamcloud.com/11106
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>